# landserm

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  config.yaml  landserm-concept.excalidraw  main.py  oled_test.py  pyproject.toml  requirements.txt  run-daemon.sh  system.py  test-daemon.sh  validators.py
config/: delivery.yaml
config-template/: delivery.yaml
config-template/domains/: services.yaml
config-template/policies/: services.yaml
config-template/scripts/: script-name.sh
config/domains/: network.yaml  services.yaml
config/policies/: services.yaml  storage.yaml
config/scripts/: hello_world.sh
install/: install.sh  landserm-daemon  landserm.service  project-dependencies.sh  uninstall.sh  update_dependencies.py
landserm/: daemon.py
landserm/bus/: parse.py  systemd.py
landserm/cli/: completers.py  config.py  interactions.py  main.py  show.py
landserm/config/: loader.py  system.py  validators.py
landserm/config/domains/: network.yaml  services.yaml  storage.yaml
landserm/config/schemas/: delivery.py  domains.py  main.py  network.py  policies.py  services.py  storage.py
landserm/core/: actions.py  context.py  delivery.py  events.py  logger.py  policy_engine.py
landserm/daemon/: daemon.py  listeners.py
landserm/domains/: services.py
landserm/observers/: services.py
landserm/semantics/: types.py
setup/: full-install.sh  install.sh  landserm  landserm.service  uninstall.sh  update_dependencies.py
tests-dev/: test1.py
