[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "landserm"
version = "0.9.0"
requires-python = ">=3.8"
dependencies = [
    "cbor2==5.8.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "dbus-next==0.2.3",
    "idna==3.11",
    "luma.core==2.5.3",
    "luma.oled==3.14.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pillow==12.1.0",
    "psutil==7.2.2",
    "Pygments==2.19.2",
    "python-systemd==0.0.9",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "smbus2==0.6.0",
    "urllib3==2.6.3",
]

[project.scripts]
landserm = "landserm.cli.main:cli"
landserm-daemon = "landserm.daemon.daemon:main"

[tool.setuptools]
packages = ["landserm"]

[tool.setuptools.package-data]
landserm = ["py.typed"]