[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "landserm"
version = "0.9.0"
requires-python = ">=3.8"
dependencies = ["click==8.3.1", "dbus_next==0.2.3", "luma.oled==3.14.0", "luma_core==2.5.3", "Pillow==12.1.1", "psutil==7.2.2", "pydantic==2.12.5", "python-dotenv==1.2.1", "PyYAML==6.0.3", "questionary==2.1.1", "Requests==2.32.5", "rich==14.3.2"]

[project.scripts]
landserm = "landserm.cli.main:cli"
landserm-daemon = "landserm.daemon.daemon:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
landserm = ["py.typed"]